# typing-habit

./: .gitignore  README.md  ]
flask-app/: app.py  leaderboard.db  tmp
flask-app/templates/: index.html
src/scraper/: main.py
typing-habit/: README.md  index.html  package-lock.json  package.json  vite.config.ts
typing-habit-backend/: pyproject.toml
typing-habit-backend/src/typing_habit_backend/: scrape.py
typing-habit/src/: App.vue
typing-habit/src/components/: Ping.vue
vue-frontend/: package-lock.json  package.json
vue-frontend/src/: App.vue  main.ts
vue-frontend/src/assets/: global.css
vue-frontend/src/components/: BaseUrl.ts  Github.vue  Leaderboard.vue  Navbar.vue  Settings.vue  TyingField.vue
vue-frontend/src/components/TypingArea/: ResultChart.ts  ResultScreen.vue  TypingArea.vue
vue-frontend/src/components/TypingArea/ResultScreen/: ResultChart.ts  ResultScreen.vue  SubmitResult.ts
vue-frontend/src/components/TypingArea/TypingField/: ChangeTypingState.ts  HandleInput.ts  RequestQuote.ts  TypingField.vue  TypingLogic.ts
